--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: a2FwcHk=
-  POSTGRES_PASSWORD: S2FwcHlfMjMxMDIw
+  POSTGRES_USERNAME: $POSTGRES_USERNAME
+  POSTGRES_PASSWORD: $POSTGRES_PASSWORD
